--- a/kotlin-native/backend.native/tests/build.gradle
+++ b/kotlin-native/backend.native/tests/build.gradle
@@ -5603,8 +5603,9 @@ if (isAppleTarget(project)) {
     }
 
     frameworkTest("testMultipleFrameworksStatic") {
-         // this test doesn't work with caches. For now caches are enabled only if isExperimentalMM is true, even if cacheTesting is passed
-         if (cacheTesting != null && isExperimentalMM) {
+         // this test doesn't work with caches.
+         // For now caches are enabled only if isExperimentalMM is true, and gcScheduler is default, even if cacheTesting is passed
+         if (cacheTesting != null && isExperimentalMM && !isAggressiveGC) {
             // See https://youtrack.jetbrains.com/issue/KT-34261.
             expectedExitStatus = 134
          }
