--- a/kotlin-native/konan/konan.properties
+++ b/kotlin-native/konan/konan.properties
@@ -203,7 +203,7 @@ llvmInlineThreshold.ios_arm32 = 50
 linkerNoDebugFlags.ios_arm32 = -S
 stripFlags.ios_arm32 = -S
 linkerDynamicFlags.ios_arm32 = -dylib
-linkerKonanFlags.ios_arm32 = -lSystem -lc++ -lobjc -framework Foundation -sdk_version 15.0
+linkerKonanFlags.ios_arm32 = -lSystem -lc++ -lobjc -framework Foundation -framework UIKit -sdk_version 15.0
 linkerOptimizationFlags.ios_arm32 = -dead_strip
 osVersionMinFlagLd.ios_arm32 = -iphoneos_version_min
 osVersionMin.ios_arm32 = 9.0
@@ -215,7 +215,6 @@ osVersionMin.ios_arm32 = 9.0
 runtimeDefinitions.ios_arm32 = KONAN_OBJC_INTEROP=1 KONAN_IOS KONAN_ARM32=1 \
   KONAN_REPORT_BACKTRACE_TO_IOS_CRASH_LOG=1 MACHSIZE=32 \
   KONAN_NO_64BIT_ATOMIC=1 KONAN_NO_UNALIGNED_ACCESS=1 KONAN_HAS_FOUNDATION_FRAMEWORK=1 KONAN_HAS_UIKIT_FRAMEWORK=1
-appStateTrackingDependencies.ios_arm32 = -framework UIKit
 
 # Apple's 64-bit iOS.
 targetToolchain.macos_x64-ios_arm64 = target-toolchain-xcode_13_1
@@ -238,14 +237,13 @@ clangDebugFlags.ios_arm64 = -O0 -mllvm -fast-isel=false -mllvm -global-isel=fals
 linkerNoDebugFlags.ios_arm64 = -S
 stripFlags.ios_arm64 = -S
 linkerDynamicFlags.ios_arm64 = -dylib
-linkerKonanFlags.ios_arm64 = -lSystem -lc++ -lobjc -framework Foundation -sdk_version 15.0
+linkerKonanFlags.ios_arm64 = -lSystem -lc++ -lobjc -framework Foundation -framework UIKit -sdk_version 15.0
 linkerOptimizationFlags.ios_arm64 = -dead_strip
 osVersionMinFlagLd.ios_arm64 = -iphoneos_version_min
 osVersionMin.ios_arm64 = 9.0
 runtimeDefinitions.ios_arm64 = KONAN_OBJC_INTEROP=1 KONAN_IOS=1 KONAN_ARM64=1 \
   KONAN_REPORT_BACKTRACE_TO_IOS_CRASH_LOG=1 MACHSIZE=64 KONAN_HAS_FOUNDATION_FRAMEWORK=1 KONAN_HAS_UIKIT_FRAMEWORK=1
 additionalCacheFlags.ios_arm64 = -Xembed-bitcode-marker
-appStateTrackingDependencies.ios_arm64 = -framework UIKit
 
 #  Apple's iOS simulator.
 targetToolchain.macos_x64-ios_x64 = target-toolchain-xcode_13_1
@@ -262,7 +260,7 @@ clangNooptFlags.ios_x64 = -O1
 clangOptFlags.ios_x64 = -O3
 clangDebugFlags.ios_x64 = -O0
 
-linkerKonanFlags.ios_x64 = -lSystem -lc++ -lobjc -framework Foundation -sdk_version 15.0
+linkerKonanFlags.ios_x64 = -lSystem -lc++ -lobjc -framework Foundation -framework UIKit -sdk_version 15.0
 linkerOptimizationFlags.ios_x64 = -dead_strip
 linkerNoDebugFlags.ios_x64 = -S
 stripFlags.ios_x64 = -S
@@ -270,7 +268,6 @@ linkerDynamicFlags.ios_x64 = -dylib
 osVersionMinFlagLd.ios_x64 = -ios_simulator_version_min
 osVersionMin.ios_x64 = 9.0
 runtimeDefinitions.ios_x64 = KONAN_OBJC_INTEROP=1 KONAN_IOS=1 KONAN_X64=1 KONAN_HAS_FOUNDATION_FRAMEWORK=1 KONAN_HAS_UIKIT_FRAMEWORK=1
-appStateTrackingDependencies.ios_x64 = -framework UIKit
 
 # iOS simulator on Apple Silicon
 
@@ -288,7 +285,7 @@ clangNooptFlags.ios_simulator_arm64 = -O1
 clangOptFlags.ios_simulator_arm64 = -O3
 clangDebugFlags.ios_simulator_arm64 = -O0 -mllvm -fast-isel=false -mllvm -global-isel=false
 
-linkerKonanFlags.ios_simulator_arm64 = -lSystem -lc++ -lobjc -framework Foundation -sdk_version 15.0
+linkerKonanFlags.ios_simulator_arm64 = -lSystem -lc++ -lobjc -framework Foundation -framework UIKit -sdk_version 15.0
 linkerOptimizationFlags.ios_simulator_arm64 = -dead_strip
 linkerNoDebugFlags.ios_simulator_arm64 = -S
 stripFlags.ios_simulator_arm64 = -S
@@ -296,7 +293,6 @@ linkerDynamicFlags.ios_simulator_arm64 = -dylib
 osVersionMinFlagLd.ios_simulator_arm64 = -ios_simulator_version_min
 osVersionMin.ios_simulator_arm64 = 9.0
 runtimeDefinitions.ios_simulator_arm64 = KONAN_OBJC_INTEROP=1 KONAN_IOS=1 KONAN_ARM64=1 KONAN_HAS_FOUNDATION_FRAMEWORK=1 KONAN_HAS_UIKIT_FRAMEWORK=1
-appStateTrackingDependencies.ios_simulator_arm64 = -framework UIKit
 
 #  Apple's tvOS simulator.
 targetToolchain.macos_x64-tvos_x64 = target-toolchain-xcode_13_1
@@ -313,7 +309,7 @@ clangNooptFlags.tvos_x64 = -O1
 clangOptFlags.tvos_x64 = -O3
 clangDebugFlags.tvos_x64 = -O0
 
-linkerKonanFlags.tvos_x64 = -lSystem -lc++ -lobjc -framework Foundation -sdk_version 15.0
+linkerKonanFlags.tvos_x64 = -lSystem -lc++ -lobjc -framework Foundation -framework UIKit -sdk_version 15.0
 linkerOptimizationFlags.tvos_x64 = -dead_strip
 linkerNoDebugFlags.tvos_x64 = -S
 stripFlags.tvos_x64 = -S
@@ -321,7 +317,6 @@ linkerDynamicFlags.tvos_x64 = -dylib
 osVersionMinFlagLd.tvos_x64 = -tvos_simulator_version_min
 osVersionMin.tvos_x64 = 9.0
 runtimeDefinitions.tvos_x64 = KONAN_OBJC_INTEROP=1 KONAN_TVOS=1 KONAN_X64=1 KONAN_HAS_FOUNDATION_FRAMEWORK=1 KONAN_HAS_UIKIT_FRAMEWORK=1
-appStateTrackingDependencies.tvos_x64 = -framework UIKit
 
 #  Apple's tvOS simulator.
 targetToolchain.macos_x64-tvos_simulator_arm64 = target-toolchain-xcode_13_1
@@ -338,7 +333,7 @@ clangNooptFlags.tvos_simulator_arm64 = -O1
 clangOptFlags.tvos_simulator_arm64 = -O3
 clangDebugFlags.tvos_simulator_arm64 = -O0 -mllvm -fast-isel=false -mllvm -global-isel=false
 
-linkerKonanFlags.tvos_simulator_arm64 = -lSystem -lc++ -lobjc -framework Foundation -sdk_version 15.0
+linkerKonanFlags.tvos_simulator_arm64 = -lSystem -lc++ -lobjc -framework Foundation -framework UIKit -sdk_version 15.0
 linkerOptimizationFlags.tvos_simulator_arm64 = -dead_strip
 linkerNoDebugFlags.tvos_simulator_arm64 = -S
 stripFlags.tvos_simulator_arm64 = -S
@@ -346,7 +341,6 @@ linkerDynamicFlags.tvos_simulator_arm64 = -dylib
 osVersionMinFlagLd.tvos_simulator_arm64 = -tvos_simulator_version_min
 osVersionMin.tvos_simulator_arm64 = 9.0
 runtimeDefinitions.tvos_simulator_arm64 = KONAN_OBJC_INTEROP=1 KONAN_TVOS=1 KONAN_ARM64=1 KONAN_HAS_FOUNDATION_FRAMEWORK=1 KONAN_HAS_UIKIT_FRAMEWORK=1
-appStateTrackingDependencies.tvos_simulator_arm64 = -framework UIKit
 
 # Apple's 64-bit tvOS.
 targetToolchain.macos_x64-tvos_arm64 = target-toolchain-xcode_13_1
@@ -366,13 +360,12 @@ clangDebugFlags.tvos_arm64 = -O0 -mllvm -fast-isel=false -mllvm -global-isel=fal
 linkerNoDebugFlags.tvos_arm64 = -S
 stripFlags.tvos_arm64 = -S
 linkerDynamicFlags.tvos_arm64 = -dylib
-linkerKonanFlags.tvos_arm64 = -lSystem -lc++ -lobjc -framework Foundation -sdk_version 15.0
+linkerKonanFlags.tvos_arm64 = -lSystem -lc++ -lobjc -framework Foundation -framework UIKit -sdk_version 15.0
 linkerOptimizationFlags.tvos_arm64 = -dead_strip
 osVersionMinFlagLd.tvos_arm64 = -tvos_version_min
 osVersionMin.tvos_arm64 = 9.0
 runtimeDefinitions.tvos_arm64 = KONAN_OBJC_INTEROP=1 KONAN_TVOS=1 KONAN_ARM64=1 \
   KONAN_REPORT_BACKTRACE_TO_IOS_CRASH_LOG=1 MACHSIZE=64 KONAN_HAS_FOUNDATION_FRAMEWORK=1 KONAN_HAS_UIKIT_FRAMEWORK=1
-appStateTrackingDependencies.tvos_arm64 = -framework UIKit
 
 # watchOS armv7k
 targetToolchain.macos_x64-watchos_arm32 = target-toolchain-xcode_13_1
