--- a/gradle/versions.properties
+++ b/gradle/versions.properties
@@ -43,7 +43,11 @@ versions.kotlinx-collections-immutable=0.3.1
 versions.kotlinx-coroutines-core-jvm=1.5.0
 versions.kotlinx-coroutines-core=1.5.0
 versions.kotlinx-metadata-jvm=0.4.0
+versions.kotlinx-serialization-json=1.3.3
 versions.ktor-network=1.0.1
+versions.ktor-client-core=2.0.2
+versions.ktor-client-cio=2.0.2
+versions.ktor-client-websockets=2.0.2
 versions.native-platform=0.14
 versions.protobuf=2.6.1
 versions.r8=2.2.64
